# gEmail

./: README.md  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: App.css  App.jsx  main.jsx  router.jsx  styles.css
src-tauri/: Cargo.toml  g_email.db  tauri.conf.json
src-tauri/migration/: Cargo.toml  README.md
src-tauri/migration/src/: lib.rs  m20230907_071333_template.rs
src-tauri/src/: db.rs  lib.rs  main.rs  model.rs
src-tauri/src/api/: api.rs
src-tauri/src/entity/: mod.rs  prelude.rs  template.rs
src/assets/css/: titleBar.css
src/component/: Configuration.jsx  TempModal.jsx  TitleBar.jsx
