[package]
name = "g_email"
version = "0.0.0"
description = "邮件爬虫"
authors = ["zero"]
license = ""
repository = ""
edition = "2021"

[workspace]
members = ["migration"]

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
migration = { path = "migration" }
tauri = { version = "1.4", features = ["window-hide", "window-start-dragging", "window-close", "window-unminimize", "window-maximize", "window-unmaximize", "window-minimize", "window-show", "dialog-all", "notification-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
lettre = "0.10.4"
sea-orm = { version = "0.12.2", features = ["sqlx-sqlite", "runtime-async-std-rustls", "macros"] }
futures = "0.3.28"
async-std = "1.12.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
